--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,9 @@
 spring:
+  devtools:
+    livereload:
+      enabled: true
+  mvc:
+    static-path-pattern: /static/**
   h2:
     console:
       enabled: true
