--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,14 +4,20 @@ spring:
       enabled: true
   mvc:
     static-path-pattern: /static/**
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:tcp://localhost/~/test
     driver-class-name: org.h2.Driver
     username: sa
     password:
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        show_sql: true
+        format_sql: true
+        use_sql_comments: true
   profiles:
     include: oauth
+  session:
+    store-type: jdbc
